CONTENIDO ACTUALIZADO (ADMINISTRADOR /ESTUDIANTE)

--- a/templates/Docente/Calendario.html
+++ b/templates/Docente/Calendario.html
@@ -1,6 +1,1 @@
-{% extends 'layoutD.html' %}
-
-{% block contenido %}
-
-
-{% endblock %}
+{% extends 'layoutD.html' %} {% block contenido %} {% endblock %}
