--- a/templates/Docente/novedades.html
+++ b/templates/Docente/novedades.html
@@ -1,6 +1,92 @@
-{% extends 'layoutD.html' %}
+{% extends 'layoutD.html' %} {% block contenido %}
 
-{% block contenido %}
+<link rel="stylesheet" href="/static/css/CssNovedades.CSS">
+<!--<link rel="stylesheet" href="/static/css/iconosnotificacion.css">-->
+
+
+<section class="seccion5">
+    <div class="prueba">
+        <h1>
+            <a href="#">
+                <i class="bi bi-bell"></i>
+                <span>Notificaciones</span>
+            </a>
+
+        </h1>
+        <div class="notificacion">
+            <hr>
+
+            <div id="revisar" style="width: 1002px;" class="btn btn-secundary">
+                <h4>
+                    <a href="#">
+                        <i class="bi bi-check2-circle"></i>
+                        <span>Calificado Trabajo 2 Ciencias</span>
+                    </a>
+                </h4>
+            </div>
+            <hr>
+
+
+            <div id="revisar" style="width: 1002px;" class="btn btn-secundary">
+                <h4>
+                    <a href="#">
+                        <i class="bi bi-check2-circle"></i>
+                        <span>Calificado Trabajo 1 Ciencias</span>
+                    </a>
+                </h4>
+            </div>
+            <hr>
+
+
+            <div id="revisar" style="width: 1002px;" class="btn btn-secundary">
+                <h4>
+                    <a href="#">
+                        <i class="bi bi-check2-circle"></i>
+                        <span>Calificado Trabajo 1 Literatura</span>
+                    </a>
+                </h4>
+            </div>
+            <hr>
+
+
+            <div id="revisar" style="width: 1002px;" class="btn btn-secundary">
+                <strong class="mb-1"></strong>
+                <h4>
+                    <a href="#">
+                        <i class="bi bi-chat-square-text"></i>
+                        <span>Docente Javier ha comentado en Trabajo 2 Ciencias</span>
+                    </a>
+                </h4>
+            </div>
+            <hr>
+
+
+
+
+
+            <!-- <div class="btn btn-secundary">
+                      <strong class="mb-1">List group item heading</strong>
+                      <small class="text-muted">Wed</small>
+                    </div>
+                    <div class="col-10 mb-1 small">Some placeholder content in a paragraph below the heading and date.</div>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+    </div>
+</section>
+
+
 
 
 {% endblock %}
