--- a/templates/Estudiante/Asignaturas/MisMaterias.html
+++ b/templates/Estudiante/Asignaturas/MisMaterias.html
@@ -1,6 +1,4 @@
-{% extends 'layoutE.html' %}
-
-{% block contenido %}
+{% extends 'layoutE.html' %} {% block contenido %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/estudiante.css' ) }}">
 <div class="vista">
     <div class="marco2">
@@ -14,12 +12,12 @@
                 <div id="asignatura">
                     <h3><a href="#">Matemáticas</a></h3>
                 </div>
-                <div id="asignatura" >
+                <div id="asignatura">
                     <h3><a href="#">Ciencias sociales</a></h3>
                 </div>
                 <div id="asignatura">
                     <h3><a href="#">Educación y aprendizaje</a></h3>
-                    </div>
+                </div>
             </div>
         </section>
     </div>
@@ -27,4 +25,3 @@
 
 
 {% endblock %}
-
