--- a/templates/Login.html
+++ b/templates/Login.html
@@ -1,47 +1,57 @@
 <!DOCTYPE html>
 <html>
-  <head>
-     <!-- Required meta tags -->
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<head>
+    <!-- Required meta tags -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <!--CSS NORMAL-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/CssLogin.css' ) }}"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/CssLogin.css' ) }}">
     <!--CSS BootStrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.1/css/bulma.min.css">
     <title>PROYECTO 8 | IMPERIUM</title>
+
     <body>
-   <div class="login-box">
-       <img src="./static/img/UN2.gif" class="avatar" alt="Avatar Image">
-      <!-- <img src="img/UN2.gif" class="avatar" alt="Avatar Image"> -->
-      <br><h1>Iniciar Sesión</h1>
-      <form id="form1">
-        <div class="container">
-        <div class="row">
-        <div class="container-fluid">
-        <!-- USERNAME INPUT -->
-        <label for="username">Usuario</label>
-        <input type="text" placeholder="Escriba Usuario">
-        <!-- PASSWORD INPUT -->
-        <label for="password">Contraseña</label>
-       <div class="input-group">
-        <input  ID="txtPassword" type="Password" Class="form-control" placeholder="Escriba Contraseña">
-        <div class="input-group-append">
-          <button id="show_password" class="btn btn-primary" type="button" onclick="mostrarPassword()"> <span class="fa fa-eye-slash icon"></span> </button>
-               </div>
+        <div class="login-box">
+            <img src="./static/img/UN2.gif" class="avatar" alt="Avatar Image">
+            <!-- <img src="img/UN2.gif" class="avatar" alt="Avatar Image"> -->
+            <br>
+            <h1>Iniciar Sesión</h1>
+            <form id="form1" action="{{url_for('hacer_login')}}" method="post">
+                <div class="container">
+                    <div class="row">
+                        <div class="container-fluid">
+                            <!-- USERNAME INPUT -->
+                            <label for="username">Usuario</label>
+                            <input type="text" required type="username" id="username" placeholder="Escriba Usuario" name="username">
+                            <!-- PASSWORD INPUT -->
+                            <label for="txtPassword">Contraseña</label>
+                            <div class="input-group">
+                                <div class="input-group">
+                                    <input id="txtPassword" required type="txtPassword" type="txtPassword" Class="form-control" placeholder="Escriba Contraseña" name="txtPassword">
+                                    <div class="input-group-append">
+                                        <button id="show_password" class="btn btn-primary" type="button" onclick="mostrarPassword()"> <span class="fa fa-eye-slash icon"></span> </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <input type="submit" value="Entrar" class="button is-success mt-2">
+                    <a href="#">Olvido la contraseña?</a><br> {# Mostrar mensajes / errores si es que existen #} {% with mensajes_flash = get_flashed_messages() %} {% if mensajes_flash %}
+                    <div class="notification is-danger mt-2">
+                        {% for mensaje in mensajes_flash %}
+                        <li>{{ mensaje }}</li>
+                        {% endfor %} {% endif %} {% endwith %}
+                    </div>
+            </form>
             </div>
-          </div>
-        </div>
-      </div>
-      <br>
-        <input type="submit" value="Entrar">
-        <a href="#">Olvido la contraseña?</a><br>
-        
-      </form>
-    </div>
-    <script src="{{url_for('static', filename='js/LoginScript.js')}}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  </body>
+            <script src="{{url_for('static', filename='js/LoginScript.js')}}"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    </body>
+
 </html>
