--- a/static/css/estudiante.css
+++ b/static/css/estudiante.css
@@ -1,148 +1,432 @@
-.prueba2{
-	width: 80%;
-	height:10%;
-		position: fixed;
-		top: 10%; right: 0;
-        background-color: rgb(230, 0, 0);
+html {
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    line-height: 1.4;
 }
 
-.marco{
-	/* Rectangle 20 */
-
-	position: absolute;
-	width: 900px;
-	height: 480px;
-	left: 384px;
-	top: 114px;
-
-	background: #FBFCFF;
-	border: 1px solid rgba(0, 0, 0, 0.38);
-	box-sizing: border-box;
-
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
+body {
+    color: #404040;
+    font-family: "Arial", Segoe UI, Tahoma, sans-serifl, Helvetica Neue, Helvetica;
+}
+
+.perfil-usuario {
+    background: linear-gradient(#3FD0F4, transparent);
+    color: #333;
+}
+
+.perfil-usuario .sombra {
+    position: absolute;
+    display: block;
+    background: linear-gradient(transparent, rgba(0, 0, 0, .5));
+    width: 100%;
+    height: 50%;
+    bottom: 0;
+    left: 0;
+}
+
+.perfil-usuario .portada-perfil,
+.perfil-usuario .sombra {
+    border-radius: 0 0 20px 20px;
+}
+
+.perfil-usuario img {
+    width: 100%;
+}
+
+.contenedor-perfil {
+    max-width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.perfil-usuario .contenedor-perfil {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
+.perfil-usuario .portada-perfil {
+    display: block;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    height: 20rem;
+    margin-bottom: .5rem;
+}
+
+.perfil-usuario .avatar-perfil {
+    display: block;
+    width: 230px;
+    height: 230px;
+    background-color: #D9DCF1;
+    position: absolute;
+    bottom: -65px;
+    left: 4rem;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 8px solid #FFFFFF;
+    box-shadow: 0 0 12px 2px rgba(0, 0, 0, .2);
+}
+
+.perfil-usuario .cambiar-foto {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, .5);
+    height: 57%;
+    bottom: 0;
+    left: 0;
+    color: #fff;
+    text-decoration: none;
+    transform: translateY(50%);
+    opacity: 0;
+    transition: all ease-in 200ms;
+}
+
+.perfil-usuario .cambiar-foto i {
+    margin-bottom: .5rem;
+    font-size: 2rem;
+}
+
+.perfil-usuario .avatar-perfil:hover .cambiar-foto {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.perfil-usuario .datos-perfil {
+    position: absolute;
+    display: block;
+    width: calc(100% - 230px - 8rem);
+    right: 0;
+    bottom: 0;
+    color: #fff;
+    text-shadow: 0 0 5px rgba(0, 0, 0, .2);
+    padding-bottom: 1rem;
+    padding-right: 1rem;
+}
+
+.perfil-usuario .titulo-usuario {
+    font-size: 2.3rem;
+    white-space: nowrap;
+    margin-bottom: .5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.perfil-usuario .bio-usuario {
+    font-size: 1em;
+    margin-bottom: .75rem;
+}
+
+.perfil-usuario .lista-perfil {
+    list-style: none;
+}
+
+.perfil-usuario .lista-perfil li {
+    display: inline-block;
+    font-size: 1em;
+    margin-right: 1rem;
+}
+
+.perfil-usuario .opcciones-perfil {
+    display: block;
+    position: absolute;
+    right: 2rem;
+    top: 1rem;
+}
+
+.perfil-usuario .opcciones-perfil button {
+    border: 0;
+    padding: 8px 20px;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, .5);
+    color: #fff;
+    cursor: pointer;
+}
+
+.perfil-usuario .menu-perfil ul {
+    display: flex;
+    list-style: none;
+    margin-left: calc(200px + 8rem);
+    width: calc(100% - 200px - 8rem);
+}
+
+.perfil-usuario .menu-perfil ul li {
+    margin-right: 1rem;
+}
+
+.perfil-usuario .menu-perfil a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    padding: 8px 20px;
+    font-weight: bold;
+    border-radius: 8px;
+    transition: all ease-in 100ms;
+}
+
+.perfil-usuario .menu-perfil a:hover {
+    background-color: #4CB0C6;
+    color: #fff;
+}
+
+.perfil-usuario .icono-perfil {
+    display: none;
+    margin-right: .75rem;
+}
+
+@media (max-width: 780px) {
+    .perfil-usuario .contenedor-perfil {
+        width: 100%;
+    }
+    .perfil-usuario .avatar-perfil {
+        left: calc(50% - 115px)
+    }
+    .perfil-usuario .datos-perfil {
+        bottom: 200px;
+        left: 0;
+        width: 100%;
+        padding: 15px;
+        text-align: center;
+    }
+    .perfil-usuario .bio-usuario {
+        font-size: 1em;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+    .perfil-usuario .titulo-usuario {
+        font-size: 2.1rem;
+    }
+    .perfil-usuario .portada-perfil {
+        height: 28rem;
+    }
+    .perfil-usuario .menu-perfil ul {
+        flex-direction: column;
+    }
+    .perfil-usuario .lista-perfil {
+        display: block;
+    }
+    .perfil-usuario .menu-perfil {
+        margin-top: 2rem;
+    }
+    .perfil-usuario .menu-perfil ul {
+        display: flex;
+        list-style: none;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 2.5rem;
+        width: 70%;
+        background-color: #fff;
+        border-radius: 12px;
+        box-shadow: 0 0 12px 2px rgba(0, 0, 0, .1);
+    }
+    .perfil-usuario .icono-perfil {
+        display: inline-block;
+    }
+}
+
+.mensaje a {
+    color: inherit;
+    margin-right: .5rem;
+    display: inline-block;
+}
+
+.mensaje a:hover {
+    color: #309B76;
+    transform: scale(1.4)
+}
+
+.mensaje a {
+    color: inherit;
+    margin-right: .5rem;
+    display: inline-block;
+}
+
+.mensaje a:hover {
+    color: #309B76;
+    transform: scale(1.4)
+}
+
+
+/*AQUI ESTABA BIEN Y NORMAL */
+
+.vistas {
+    position: absolute;
+    top: 200px;
+    width: 100%;
+    height: 100px;
+}
+
+.prueba2 {
+    width: 80%;
+    height: 10%;
+    position: fixed;
+    top: 10%;
+    right: 0;
+    background-color: rgb(230, 0, 0);
+}
+
+.marco {
+    /* Rectangle 20 */
+    position: absolute;
+    width: 1096.05px;
+    height: 480px;
+    left: 270px;
+    top: 66px;
+    background: #FBFCFF;
+    border: 1px solid rgba(255, 255, 255, 0.38);
+    box-sizing: border-box;
+}
+
+.prueba2 {
+    width: 80%;
+    height: 10%;
+    position: fixed;
+    top: 10%;
+    right: 0;
+    background-color: rgb(230, 0, 0);
+}
+
+.marco {
+    /* Rectangle 20 */
+    position: absolute;
+    width: 1000px;
+    height: 550px;
+    left: 384px;
+    top: 114px;
+    background: #FBFCFF;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+}
+
+.vistas {
+    width: 60%;
+    height: 40%;
+    margin-top: 10px;
+    top: 100%;
+    font-size: x-large;
+    margin-left: 50px;
+}
+
+.editar {
+    width: 40px;
+    height: 20px;
+    margin-right: 10px;
+    float: right;
+    clear: left;
+    margin-top: -20px;
+    margin-right: 40px;
+}
+
+#ed {
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+.edi {
+    clear: left;
+}
 
 .seccion h2 {
-	text-align: center;
+    margin-top: 30px;
+    text-align: center;
 }
 
-
-.seccion{
-	background: rgb(255, 255, 255);
+.seccion {
+    background: rgb(255, 255, 255);
 }
 
-.circulo{
-
-	/* justify-content: center;
+.circulo {
+    /* justify-content: center;
 	align-items: center;*/
-	width: 150px;
-	height: 150px;
-	background: blue;
-	border-radius: 100% ;
-
-	margin-top: 20px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-  
+    width: 150px;
+    height: 150px;
+    background: blue;
+    border-radius: 100%;
+    margin-top: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .avatar-est {
-	width:  100%;
-	height: 100%;
-	border-radius: 100% ;
-	border: 1px solid black;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    border: 1px solid black;
 }
 
-.marco.seccion.vista{
-	/* Nombre completo: Fern Gonzales */
-
-	width: 638px;
-	height: 66px;
-	left: 349px;
-	top: 492px;
-	
-	font-family: Chenla;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 30px;
-	line-height: 55px;
-	text-align: center;
-
-	color: #000000;
+.marco.seccion.vista {
+    /* Nombre completo: Fern Gonzales */
+    width: 638px;
+    height: 66px;
+    left: 349px;
+    top: 492px;
+    font-family: Chenla;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 55px;
+    text-align: center;
+    color: #000000;
 }
 
-.marco2{
-	/* Rectangle 20 */
-
-	position: absolute;
-	width: 900px;
-	height: 450px;
-	left: 384px;
-	top: 114px;
-	;
-	background: #FBFCFF;
-	border: 1px solid rgba(0, 0, 0, 0.38);
-	box-sizing: border-box;
-
+.marco2 {
+    /* Rectangle 20 */
+    position: absolute;
+    width: 1000px;
+    height: 550px;
+    left: 384px;
+    top: 114px;
+    ;
+    background: #FBFCFF;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
 }
+
 .seccion2 h2 {
-	text-align: left;
-	margin-left: 50px;
-	margin-top: 20px;
+    text-align: left;
+    margin-left: 50px;
+    margin-top: 20px;
 }
 
-
-.editar{
-	width: 40px;
-	height: 20px;
-	margin-right: 10px;
-	float: right;
-	
+.asignaturas {
+    /* Rectangle 19 */
+    position: absolute;
+    width: 720px;
+    height: 200px;
+    left: 80px;
+    top: 100px;
+    padding: 5px;
+    background: #FBFCFF;
+    box-sizing: border-box;
 }
 
-.asignaturas{
-	/* Rectangle 19 */
-
-	position: absolute;
-	width: 720px;
-	height: 200px;
-	left: 80px;
-	top: 100px;
-	padding: 5px;
-	background: #FBFCFF;
-	box-sizing: border-box;
-}
-
-#asignatura{
-	border: 1px solid rgba(0, 0, 0, 0.38);
-	box-sizing: border-box;
-	margin-bottom: 30px;
+#asignatura {
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+    margin-bottom: 30px;
 }
 
 a {
-	color: black;
-
+    color: black;
 }
 
-.vistas{
-	width: 80%;
-	height: 40%;
-	margin-top: 10px;
-	top: 100%;
-	font-size: x-large;
-	margin-left: 50px;
-
-}
-
-#ed{
-	box-sizing: border-box;
-	margin-bottom: 10px;
-}
-
-.edi{
-	clear: left;
-}
 
 /*
 
@@ -167,121 +451,250 @@ a {
 }
 */
 
-.marco3{
-	/* Rectangle 20 */
-
-	position: absolute;
-	width: 900px;
-	height: 450px;
-	left: 384px;
-	top: 114px;
-
-	background: #FBFCFF;
-	border: 1px solid rgba(0, 0, 0, 0.38);
-	box-sizing: border-box;
+.marco3 {
+    /* Rectangle 20 */
+    position: absolute;
+    width: 1000px;
+    height: 550px;
+    left: 384px;
+    top: 114px;
+    background: #FBFCFF;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
 }
 
 .seccion3 h2 {
-	text-align: left;
-	margin-left: 50px;
-	margin-top: 20px;
+    text-align: left;
+    margin-left: 50px;
+    margin-top: 20px;
 }
 
-.marco4{
-	/* Rectangle 20 */
-	position: absolute;
-	width: 900px;
-	height: 550px;
-	left: 384px;
-	top: 114px;
-	background: #FBFCFF;
-	border: 1px solid rgba(0, 0, 0, 0.38);
-	box-sizing: border-box;
+.marco4 {
+    /* Rectangle 20 */
+    position: absolute;
+    width: 1000px;
+    height: 550px;
+    left: 384px;
+    top: 114px;
+    background: #FBFCFF;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
 }
-
-
 
 #boton {
-	width: 200px;
-	height: 60px;
-	float: right;
-	text-align: center;
-
-	margin-right: 150px;
-	background: #FBFCFF;
-	border-radius: 30px;
+    position: absolute;
+    width: 200px;
+    height: 60px;
+    float: right;
+    text-align: center;
+    margin-top: -140px;
+    top: 350px;
+    margin-left: 450px;
+    background: #FBFCFF;
+    border-radius: 30px;
 }
-#boton h3{
-	font-size: 20px;
-	text-shadow: rgb(230, 0, 0);
-	margin-top: 10px;
+
+#matr {
+    text-align: center;
+    margin-top: -180px;
+    top: 350px;
+    margin-left: 310px;
+    color: #FBFCFF;
+    ;
+}
+
+#boton h3 {
+    font-size: 20px;
+    text-shadow: rgb(230, 0, 0);
+    margin-top: 10px;
 }
 
 .seccion4 h2 {
-	text-align: left;
-	margin-left: 50px;
-	margin-top: 20px;
+    text-align: left;
+    margin-left: 50px;
+    margin-top: 20px;
 }
 
 .matricula {
-	width: 780px;
-	height: 250px;
-	background: blue;
-	border-color: 2x black;
-	margin-left: 50px;
-	margin-top: 20px;
+    width: 780px;
+    height: 250px;
+    background: blue;
+    border-color: 2x black;
+    margin-left: 50px;
+    margin-top: 20px;
 }
 
-.matricula > .inscripcion {
-	width: 100%;
-	height: 100%;
+.matricula>.inscripcion {
+    width: 100%;
+    height: 100%;
 }
 
-.noti{
-	margin-left: 50px;
-	margin-top: 5px;
+.noti {
+    margin-left: 50px;
+    margin-top: 5px;
 }
 
-.marco5{
-	/* Rectangle 20 */
-	position: absolute;
-	width: 900px;
-	height: 550px;
-	left: 384px;
-	top: 114px;
-	
-
-	background: #FBFCFF;
-	border: 1px solid rgba(0, 0, 0, 0.38);
-	box-sizing: border-box;
+.marco5 {
+    /* Rectangle 20 */
+    position: absolute;
+    width: 1000px;
+    height: 550px;
+    left: 384px;
+    top: 114px;
+    background: #FBFCFF;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
 }
 
 .seccion5 h2 {
-	text-align: left;
-	margin-left: 50px;
-	margin-top: 20px;
+    text-align: left;
+    margin-left: 50px;
+    margin-top: 20px;
 }
 
-#act{
-	width: 790px;
-	height: 90px;
-	box-sizing: border-box;
-	margin-bottom: 30px;
-	border: 1px solid rgba(0, 0, 0, 0.38);
-	box-sizing: border-box;
-	margin-bottom: 30px;
+#act {
+    width: 790px;
+    height: 90px;
+    box-sizing: border-box;
+    margin-bottom: 30px;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+    margin-bottom: 30px;
 }
 
-.descarga{
-	width: 20px;
-	height: 20px;
+.descarga {
+    width: 20px;
+    height: 20px;
+    margin-top: -50px;
+    margin-right: 10px;
+    float: right;
 }
-.acti{
-	width: 80%;
-	height: 40%;
-	margin-top: 30px;
-	top: 100%;
-	font-size: x-large;
-	margin-left: 50px;
-	
+
+.acti {
+    width: 80%;
+    height: 40%;
+    margin-top: 30px;
+    top: 100%;
+    font-size: x-large;
+    margin-left: 50px;
+}
+
+#calif {
+    float: right;
+}
+
+.marco6 {
+    /* Rectangle 20 */
+    position: absolute;
+    width: 900px;
+    height: 550px;
+    left: 384px;
+    top: 114px;
+    background: #FBFCFF;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+}
+
+.seccion6 h2 {
+    text-align: left;
+    margin-left: 80px;
+    margin-top: 20px;
+}
+
+.marco7 {
+    /* Rectangle 20 */
+    position: absolute;
+    width: 1000px;
+    height: 550px;
+    left: 384px;
+    top: 114px;
+    background: #FBFCFF;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+}
+
+.seccion7 h2 {
+    text-align: left;
+    margin-left: 60px;
+    margin-top: 20px;
+}
+
+.lista-tutor {
+    /* Rectangle 19 */
+    position: absolute;
+    width: 760px;
+    height: 200px;
+    left: 80px;
+    top: 200px;
+    padding: 5px;
+    background: #3164F4;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 100px 100pxrepeat(2, 1fr);
+    grid-template-rows: 100px 100pxrepeat(2, 1fr);
+    grid-gap: 10px;
+}
+
+#profe {
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+    margin-bottom: 30px;
+    background: #3164F4;
+    clear: both;
+}
+
+#profe1 {
+    grid-column: 1 / 3;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+    float: left;
+}
+
+#profe2 {
+    grid-column: 3 / 5;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+}
+
+#profe3 {
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+    float: none;
+    clear: left;
+    margin-bottom: 30px;
+    grid-column: 1 / 3;
+}
+
+#profe4 {
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+    margin-bottom: 30px;
+    grid-column: 3 / 5;
+    float: right;
+}
+
+.franja {
+    /* Rectangle 19 */
+    position: absolute;
+    width: 360px;
+    height: 200px;
+    left: 80px;
+    top: 350px;
+    padding: 5px;
+    background: #FBFCFF;
+    box-sizing: border-box;
+}
+
+.seleccion {
+    margin-left: 60px;
+}
+
+.descripcion {
+    padding: 20px;
+    width: 880px;
+    height: 290px;
+    margin-left: 60px;
+    border: 1px solid rgba(0, 0, 0, 0.38);
+    box-sizing: border-box;
+    overflow: scroll;
 }
