--- a/templates/Estudiante/entregas.html
+++ b/templates/Estudiante/entregas.html
@@ -1,6 +1,4 @@
-{% extends 'layoutE.html' %}
-
-{% block contenido %}
+{% extends 'layoutE.html' %} {% block contenido %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/estudiante.css' ) }}">
 <div class="vista">
     <div class="marco3">
@@ -11,17 +9,17 @@
                     <h4><a href="#">Trabajo 1-ciencia:</a> </h4>
                     <h6>Retroalimentación:</h6>
                     <p>********</p>
-                    <h6>Calificación:</h6>
+                    <h6 id="calif">Calificación:</h6>
 
                     <img src="/static/img/—Pngtree—file download icon_4720205.png" class="descarga">
                 </div>
                 <div id="act">
                     <h4><a href="#">Trabajo 1: literatura</a></h4>
                 </div>
-                <div id="act" >
+                <div id="act">
                     <h4><a href="#">Trabajo 2: ciencia</a></h4>
                 </div>
-                
+
             </div>
         </section>
     </div>
