--- a/templates/LayoutS.html
+++ b/templates/LayoutS.html
@@ -2,126 +2,128 @@
 <html lang="es">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="">
-  <!--Css-->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/CssLayout.css' ) }}">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <!--Css-->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/CssLayout.css' ) }}">
 
-  <!--Css BootStrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!--Iconos BoootStrap-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
+    <!--Css BootStrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!--Iconos BoootStrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
 
-  <title>Administrador</title>
+
+    <title>Administrador</title>
 </head>
 
 <body>
-  <main>
+
     <div>
-      <header class="header">
-        <div class="container">
-          <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a href="/Administrador/novedades" class=icon-campana>
-                <i class="bi bi-bell-fill"></i>
-              </a>
-            </li>
-            <li class=nav-item>
-              <a>El Admin :v</a>
-            </li>
-            <li class=nav-item>
-              <a>
-                <i class="bi bi-person-circle"></i>
-              </a>
-            </li>
-          </ul>
-      </header>
-    </div>
-    {% block contenido %}
-
-    {% endblock %}
-    <!--	--------------->
-
-    <div class="contenedor-menu">
-      <div class="conte-menu text-white">
-        <nav>
-          <a>
-            <i class="bi bi-bullseye"></i>
-            <span>Admnistrador</span>
-          </a>
-          <hr>
-          <ul class="nav nav-pills">
-            <li>
-              <a title="Perfil" href="/Administrador/PerfilS">
-                <i class="bi bi-people-fill"></i>
-                <span>Area Personal</span>
-              </a>
-            </li>
-            <li>
-              <a href="/Administrador/GestiondeCursos">
-                <i class="bi bi-journal-text"></i>
-                <span>Gestion De Cursos</span>
-              </a>
-            </li>
-            <li>
-            <li class="mb_1">
-              <a title="Desplegable" class="btn btn-toggle align-items-center rounded collapsed"
-                data-bs-toggle="collapse" data-bs-target="#tarea-collapse" aria-expanded="false">
-                <i class="bi bi-journal-text"></i>
-                <span>Gestion de usuarios</span>
-              </a>
-              <div class="collapse" id="tarea-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                  <li><a class="dropdown-item" href="/Administrador/CrearUsuarios">Crear Usuarios</a></li> <!--Creando y asgignando roles-->
-                  <li><a class="dropdown-item" href="/Administrador/VisualizarUsuarios"> Visualizar Usuarios</a></li> <!--Ver/Editar/Eliminar-->
+        <header class="header">
+            <div class="container">
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a href="/Administrador/novedades" class=icon-campana>
+                            <i class="bi bi-bell-fill"></i>
+                        </a>
+                    </li>
+                    <li class=nav-item>
+                        <a>{{session["usuario"]}}</a>
+                    </li>
+                    <li class=nav-item>
+                        <a>
+                            <i class="bi bi-person-circle"></i>
+                        </a>
+                    </li>
                 </ul>
-              </div>
-            </li>
-            <li>
-              <a href="/Administrador/CrearAsignatura">
-                <i class="bi bi-journals"></i>
-                <span>Crear Asignatura</span>
-              </a>
-            </li>
-            <li>
-              <a href="/Administrador/Calendario">
-                <i class="bi bi-journals"></i>
-                <span>Novedades</span>
-              </a>
-            </li>
-          </ul>
-          <hr>
-          <ul class="nav nav-pills">
-            <li>
-              <a href="/Login">
-                <i class="bi bi-box-arrow-in-left"></i>
-                <span>Cerrar Sesion</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
+        </header>
+        </div>
+        {% block contenido %} {% endblock %}
+        <!--	--------------->
 
-    <div class="divider"></div>
-  </main>
+        <div class="contenedor-menu">
+            <div class="conte-menu text-white">
+                <nav>
+                    <a>
+                        <i class="bi bi-bullseye"></i>
+                        <span>Admnistrador</span>
+                    </a>
+                    <hr>
+                    <ul class="nav nav-pills">
+                        <li>
+                            <a title="Perfil" href="/Administrador/PerfilS">
+                                <i class="bi bi-people-fill"></i>
+                                <span>Area Personal</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/Administrador/GestiondeCursos">
+                                <i class="bi bi-journal-text"></i>
+                                <span>Gestion De Cursos</span>
+                            </a>
+                        </li>
+                        <li>
+                            <li class="mb_1">
+                                <a title="Desplegable" class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#tarea-collapse" aria-expanded="false">
+                                    <i class="bi bi-journal-text"></i>
+                                    <span>Gestion de usuarios</span>
+                                </a>
+                                <div class="collapse" id="tarea-collapse">
+                                    <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                                        <li><a class="dropdown-item" href="/Administrador/CrearUsuarios">Crear Usuarios</a></li>
+                                        <!--Creando y asgignando roles-->
+                                        <li><a class="dropdown-item" href="/Administrador/VisualizarUsuarios"> Visualizar Usuarios</a></li>
+                                        <!--Ver/Editar/Eliminar-->
+                                    </ul>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="/Administrador/CrearAsignatura">
+                                    <i class="bi bi-journals"></i>
+                                    <span>Crear Asignatura</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/Administrador/novedades">
+                                    <i class="bi bi-journals"></i>
+                                    <span>Novedades</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/Administrador/Calendario">
+                                    <i class="bi bi-journals"></i>
+                                    <span>Calendario</span>
+                                </a>
+                            </li>
+                    </ul>
+                    <hr>
+                    <ul class="nav nav-pills">
+                        <li>
+                            <a href="{{url_for('logout')}}">
+                                <i class="bi bi-box-arrow-in-left"></i>
+                                <span>Cerrar Sesion</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
 
-  <!-- Optional JavaScript; choose one of the two! BootStrap-->
+        <div class="divider"></div>
+        </main>
 
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+        <!-- Optional JavaScript; choose one of the two! BootStrap-->
 
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Option 2: Separate Popper and Bootstrap JS -->
+        <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
